--- a/public/style/main.css
+++ b/public/style/main.css
@@ -1652,131 +1652,155 @@ footer {
 * Content Account
 */
 .bg-image {
-  text-align: center; }
-  .bg-image img {
-    width: 100%; }
+  text-align: center;
+}
+.bg-image img {
+  width: 100%;
+}
 
 .login-wraper {
-  position: relative; }
-  .login-wraper .login-window {
-    position: absolute;
-    width: 570px;
-    top: 50%;
-    left: 50%;
-    margin-left: -2px;
-    margin-top: -288px; }
-    .login-wraper .login-window .l-head {
-      background-color: #ffffff;
-      padding: 40px;
-      border-bottom: solid 1px #eceff0;
-      font-weight: 500;
-      font-size: 22px;
-      color: #343434;
-      border-top-left-radius: 3px;
-      border-top-right-radius: 3px; }
-      @media only screen and (max-width: 767px) {
-        .login-wraper .login-window .l-head {
-          background-color: #fbfdfe; } }
-    .login-wraper .login-window .l-form {
-      text-align: left;
-      background-color: #fbfdfe;
-      border-bottom-left-radius: 3px;
-      border-bottom-right-radius: 3px;
-      padding: 25px 70px 70px; }
-      .login-wraper .login-window .l-form label {
-        font-weight: 500; }
-      @media only screen and (max-width: 767px) {
-        .login-wraper .login-window .l-form .btn {
-          border-radius: 30px;
-          padding-top: 16px;
-          padding-bottom: 12px; } }
-  .login-wraper .checkbox {
-    font-weight: normal; }
-    @media only screen and (max-width: 767px) {
-      .login-wraper .checkbox {
-        margin-bottom: 30px; } }
-    .login-wraper .checkbox p {
-      margin-bottom: 4px; }
-    .login-wraper .checkbox .text2 {
-      display: block;
-      font-size: 14px;
-      color: #7e7e7e; }
-  .login-wraper .ortext {
-    padding-top: 25px;
-    color: #7e7e7e; }
-  .login-wraper .signuptext {
-    padding-top: 25px;
-    text-align: center;
-    color: #343434;
-    font-weight: 500; }
-    .login-wraper .signuptext.text-right {
-      text-align: right; }
-  .login-wraper .forgottext {
-    margin-top: 25px; }
-    .login-wraper .forgottext a {
-      color: #7e7e7e; }
-      .login-wraper .forgottext a:hover {
-        text-decoration: underline; }
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  min-height: 100vh;
+  margin-bottom: 2%;
+  position: relative;
+}
 
 .banner-text {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  margin-top: -50px;
-  margin-left: -580px;
-  width: 550px; }
-  .banner-text .line {
-    height: 1px;
-    border-top: solid 1px #ea2c5a;
-    padding-bottom: 50px;
-    width: 280px; }
-  .banner-text .b-text {
-    color: #ffffff;
-    font-size: 80px;
-    text-align: left;
-    line-height: 80px; }
-    .banner-text .b-text .color-b1 {
-      color: #b7135d; }
-    .banner-text .b-text .color-b2 {
-      color: #be154e; }
-    .banner-text .b-text .color-b3 {
-      color: #d71d52; }
-  .banner-text .overtext {
-    margin-top: 30px;
-    color: #a1a1a1;
-    text-align: left; }
+  text-align: center;
+  margin-bottom: 20px;
+}
 
-@media (min-width: 100px) and (max-width: 1365px) {
-  .banner-text {
-    position: relative;
-    top: 0;
-    left: 0;
-    margin-top: 0;
-    margin-left: 0;
-    width: auto; }
-    .banner-text .line {
-      display: none; }
-    .banner-text .b-text {
-      color: #000000;
-      font-size: 30px;
-      text-align: center;
-      line-height: 30px;
-      padding-top: 30px; }
-    .banner-text .overtext {
-      margin: 15px 0;
-      color: #a1a1a1;
-      text-align: center; }
-  .login-wraper .login-window {
-    position: relative;
-    width: auto;
-    top: 0;
-    left: 0;
-    margin-left: 0;
-    margin-top: 0; }
-    .login-wraper .login-window .l-head {
-      padding: 20px 10px; }
-    .login-wraper .login-window .l-form {
-      padding: 25px 20px; } }
+.banner-text .line {
+  display: none;
+}
+
+.banner-text .b-text {
+  color: #ffffff;
+  font-size: 80px;
+  text-align: center;
+  line-height: 80px;
+}
+
+.banner-text .overtext {
+  margin-top: 30px;
+  color: #a1a1a1;
+  text-align: center;
+}
+
+.login-wraper .login-window {
+  width: 100%;
+  max-width: 570px;
+  background-color: #ffffff;
+  border-radius: 3px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+}
+
+.login-wraper .login-window .l-head {
+  background-color: #ffffff;
+  padding: 40px;
+  border-bottom: solid 1px #eceff0;
+  font-weight: 500;
+  font-size: 22px;
+  color: #343434;
+  border-top-left-radius: 3px;
+  border-top-right-radius: 3px;
+}
+
+@media only screen and (max-width: 767px) {
+  .login-wraper .login-window .l-head {
+    background-color: #fbfdfe;
+  }
+}
+
+.login-wraper .login-window .l-form {
+  text-align: left;
+  background-color: #fbfdfe;
+  border-bottom-left-radius: 3px;
+  border-bottom-right-radius: 3px;
+  padding: 25px 70px 70px;
+}
+
+.login-wraper .login-window .l-form label {
+  font-weight: 500;
+}
+
+@media only screen and (max-width: 767px) {
+  .login-wraper .login-window .l-form {
+    padding: 25px 20px;
+  }
+  .login-wraper .login-window .l-form .btn {
+    border-radius: 30px;
+    padding-top: 16px;
+    padding-bottom: 12px;
+  }
+}
+
+.login-wraper .checkbox {
+  font-weight: normal;
+}
+
+@media only screen and (max-width: 767px) {
+  .login-wraper .checkbox {
+    margin-bottom: 30px;
+  }
+}
+
+.login-wraper .checkbox p {
+  margin-bottom: 4px;
+}
+
+.login-wraper .checkbox .text2 {
+  display: block;
+  font-size: 14px;
+  color: #7e7e7e;
+}
+
+.login-wraper .ortext {
+  padding-top: 25px;
+  color: #7e7e7e;
+}
+
+.login-wraper .signuptext {
+  padding-top: 25px;
+  text-align: center;
+  color: #343434;
+  font-weight: 500;
+}
+
+.login-wraper .signuptext.text-right {
+  text-align: right;
+}
+
+.login-wraper .forgottext {
+  margin-top: 25px;
+}
+
+.login-wraper .forgottext a {
+  color: #7e7e7e;
+}
+
+.login-wraper .forgottext a:hover {
+  text-decoration: underline;
+}
+
+@media (min-width: 100px) {
+  .banner-text .b-text {
+    color: #000000;
+    font-size: 30px;
+    text-align: center;
+    line-height: 30px;
+    padding-top: 30px;
+  }
+
+  .banner-text .overtext {
+    margin: 15px 0;
+    color: #a1a1a1;
+    text-align: center;
+  }
+}
 
 /*
 * Content Account END
