--- a/public/style/main.css
+++ b/public/style/main.css
@@ -721,6 +721,7 @@ video {
   position: relative; }
   .b-article .v-img img {
     object-fit: cover;
+    border-radius: 10px;
     height: 100%;
     width: 100%; }
   .b-article .v-img .time {
