Mise en place de la redirection vers le profil de compte lors de l'inscription et mise en place d'un message de requierd pour l'image d'un article

--- a/public/style/main.css
+++ b/public/style/main.css
@@ -50,6 +50,9 @@ label {
 .color-active {
   color: #ea2c5a; }
 
+.color-etoile {
+  color: rgb(211, 14, 14); }
+  
 .padding-def {
   padding: 70px 0; }
 
