--- a/App/Views/base.html
+++ b/App/Views/base.html
@@ -79,7 +79,7 @@
                     {% else %}
                     <div class="col-lg-2 col-sm-12 hidden-xs">
                         <div class="loginsignup pull-right">
-                            <a href="/login">Connexion</a> . <a href="/register">Inscription</a>
+                            <a href="/login">Connexion</a> | <a href="/register">Inscription</a>
                         </div>
                         <div class="clearfix"></div>
                     </div>
