--- a/App/Views/User/account.html
+++ b/App/Views/User/account.html
@@ -39,8 +39,12 @@
                                             Plus récent <span class="caret"></span>
                                         </button>
                                         <ul class="dropdown-menu">
-                                            <li><a href="#"><i class="cv cvicon-cv-relevant"></i> Popularité</a></li>
-                                            <li><a href="#"><i class="cv cvicon-cv-calender"></i> Plus récent</a></li>
+                                            <li><a onclick="getProductsAndRender('views')"><i
+                                                    class="cv cvicon-cv-calender"></i>
+                                                Popularité</a></li>
+                                            <li><a onclick="getProductsAndRender('date')"><i
+                                                    class="cv cvicon-cv-calender"></i>
+                                                Récent</a></li>
                                         </ul>
                                     </div>
                                     <div class="clearfix"></div>
