--- a/App/Views/Product/Show.html
+++ b/App/Views/Product/Show.html
@@ -9,12 +9,9 @@
         <div class="row">
             <div class="col-lg-8 col-xs-12 col-sm-12">
                 <div class="preview-article">
-                    <img
-                            src="{{ ('/storage/' ~ article.picture) }}"/>
-
+                    <img src="{{ ('/storage/' ~ article.picture) }}"/>
                 </div>
-                <h1><a href="#">{{article.name}}</a></h1>
-
+                <h1><a href="#">{{ article.name }}</a></h1>
 
                 <div class="author">
                     <div class="author-head">
@@ -34,15 +31,36 @@
                 <div class="info">
                     <div class="info-content">
                         <h4>Description:</h4>
-                        <p>{{article.description}}</p>
+                        <p>{{ article.description }}</p>
                     </div>
                     <div class="u-area mt-small">
-
-                    <a name="submit" href="mailto:{{article.email}}" class="btn btn-primary u-btn">Contacter {{article
-                        .username}}</a>
-
+                        <a name="submit" href="mailto:{{ article.email }}" class="btn btn-primary u-btn">Contacter {{ article.username }}</a>
                     </div>
                 </div>
+
+                {% if article.user_id == session_user_id %}
+                <div class="edit-article mt-40">
+                    <h3>Modifier l'article</h3>
+                    <form method="POST" action="/product/{{ article.id }}/edit" enctype="multipart/form-data">
+                        <div class="form-group">
+                            <label for="name">Titre</label>
+                            <input type="text" id="name" name="name" class="form-control" value="{{ article.name }}" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="description">Description</label>
+                            <textarea id="description" name="description" class="form-control" required>{{ article.description }}</textarea>
+                        </div>
+                        <div class="form-group">
+                            <label for="picture">Image</label>
+                            <input type="file" id="picture" name="picture" class="form-control">
+                        </div>
+                        <button type="submit" name="update" class="btn btn-success">Mettre à jour</button>
+                    </form>
+                    <form method="POST" action="/product/{{ article.id }}/delete" class="mt-20">
+                        <button type="submit" name="delete" class="btn btn-danger">Supprimer l'article</button>
+                    </form>
+                </div>
+                {% endif %}
             </div>
 
             <!-- right column -->
@@ -53,13 +71,11 @@
                         {% for suggestion in suggestions %}
                         <div class="col-lg-12 col-sm-12">
                             <div class="v-desc">
-                                <a href="{{ ('/product/' ~ suggestion.id) }}">{{suggestion.name}}</a>
+                                <a href="{{ ('/product/' ~ suggestion.id) }}">{{ suggestion.name }}</a>
                             </div>
-
                             <div class="v-views">
-                                {{ suggestion.views}} vues
+                                {{ suggestion.views }} vues
                             </div>
-
                             <hr>
                         </div>
                         {% endfor %}
